Closed Bug 396679 Opened 17 years ago Closed 16 years ago

wrong line ending of toolkit\crashreporter\google-breakpad\src\common\windows\Makefile.in and toolkit\crashreporter\client\resource.h

Categories

(Toolkit :: Crash Reporting, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.9beta4

People

(Reporter: roytam, Assigned: roytam)

Details

User-Agent:       Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8.1.8pre) Gecko/20070918 Firefox/2.0.0.8pre (Firefox musume)
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8.1.8pre) Gecko/20070918 Firefox/2.0.0.8pre (Firefox musume)

Currently the line ending of toolkit\crashreporter\google-breakpad\src\common\windows\Makefile.in is 0D 0D 0A which leads to error when compiling.
The correct line ending in Windows is 0D 0A only.

Reproducible: Always
Version: unspecified → Trunk
Component: General → Breakpad Integration
Product: Firefox → Toolkit
QA Contact: general → breakpad.integration
Also toolkit\crashreporter\client\resource.h
ted, is this our problem, or is this a problem upstream, too?
Keywords: checkin-needed
The Makefile.in files only exist in our repo.
Status: UNCONFIRMED → NEW
Ever confirmed: true
... and crashreporter/client is purely mozilla code, but that file winds up being edited by Visual Studio every time I change the UI, which is probably why it has Windows line endings.  I'm not sure what VS does if it has unix line endings.
Checking in toolkit/crashreporter/client/resource.h;
/cvsroot/mozilla/toolkit/crashreporter/client/resource.h,v  <--  resource.h
new revision: 1.5; previous revision: 1.4
done
Checking in toolkit/crashreporter/google-breakpad/src/common/windows/Makefile.in;
/cvsroot/mozilla/toolkit/crashreporter/google-breakpad/src/common/windows/Makefile.in,v  <--  Makefile.in
new revision: 1.4; previous revision: 1.3
done
Assignee: nobody → roytam
Keywords: checkin-needed
OS: Windows XP → All
Hardware: PC → All
Summary: wrong line ending of toolkit\crashreporter\google-breakpad\src\common\windows\Makefile.in → wrong line ending of toolkit\crashreporter\google-breakpad\src\common\windows\Makefile.in and toolkit\crashreporter\client\resource.h
Target Milestone: --- → mozilla1.9beta4
Status: NEW → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.