Bug 396679 - "wrong line ending of toolkit\crashreporter\google-breakpad\src\common\windows\Makefile.in and toolkit\crashreporter\client\resource.h" [p=roytam@gmail.com (Roy Tam)]