toolkit/crashreporter/client/resource.h
@@ -22,7 +22,7 @@
 #define IDC_VIEWREPORTTEXT              1016
 
 // Next default values for new objects
-// 
+//
 #ifdef APSTUDIO_INVOKED
 #ifndef APSTUDIO_READONLY_SYMBOLS
 #define _APS_NEXT_RESOURCE_VALUE        106
